# seanaye-site

./: .gitignore  Cargo.toml  deno.json  fresh.gen.ts  resume.md  twind.config.ts
.github/workflows/: deploy.yml
components/: AboutSean.tsx  EmailIcon.tsx  GithubIcon.tsx  Header.tsx  Layout.tsx  LinkedinIcon.tsx
hooks/: useGetDevicePixelRatio.ts  useMeasureWindow.ts
islands/: GameOfLifeCanvas.tsx
lib/: parser.generated.js  parser_bg.wasm
parser/: Cargo.toml
parser/src/: lib.rs
routes/: _app.tsx  index.tsx  resume.tsx
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
rs_lib/src/game_of_life/: coord.rs  dx.rs  mod.rs  universe.rs
static/: rs_lib.generated.js  rs_lib_bg.wasm
utils/: colors.ts  debounce.ts  socialUrls.ts
