[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
gloo-render = "0.2.0"
js-sys = "=0.3.64"
rand = "0.8.5"
wasm-bindgen = "=0.2.87"
web-sys = {version = "0.3.64", features = ["HtmlCanvasElement", "HtmlElement", "Document", "Window", "CssStyleDeclaration"]}

